[tool.poetry]
name = "researcher_crew"
version = "0.1.0"
description = "researcher-crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
researcher_crew = "researcher_crew.main:run"
run_crew = "researcher_crew.main:run"
train = "researcher_crew.main:train"
replay = "researcher_crew.main:replay"
test = "researcher_crew.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
